fix: align text input max width to 4 columns (#1802)

--- a/components/o3-form/src/css/components/text-input.css
+++ b/components/o3-form/src/css/components/text-input.css
@@ -1,10 +1,13 @@
+@import "@financial-times/o3-foundation/grid.css";
 
 .o3-form-text-input {
 	border: var(--_o3-form-text-input-border);
 	padding: var(--o3-spacing-3xs) var(--o3-spacing-2xs);
 	background-color: var(--_o3-form-text-input-background-color);
 	border-radius: var(--_o3-form-text-input-border-radius);
-	max-width: var(--_o3-form-text-input-max-width);
+
+	--o3-grid-columns-to-span-count: 4;
+	max-width: var(--_o3-form-text-input-max-width, var(--o3-grid-columns-to-span-width));
 }
 
 .o3-form-text-input--short-2 {
